--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="navbar">
                <div class="logo-toggle-container">
                   <a href="#">
-                  <img src="img/BORDERLAND_BANNER.png" alt="" />
+                  <img src="resource/BORDERLAND_BANNER.png" alt="" />
                   </a>
                   <span class="toggle-box">
                   <span></span>
@@ -73,7 +73,7 @@
 
 
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-      <script type="text/javascript" src="js/code.js"></script>
+      <script type="text/javascript" src="resource/code.js"></script>
 
 
 
