--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
-	<title>Borderland</title>
+   <title>Borderland SMP - Index</title>
 
-	<link rel="stylesheet" type="text/css" href="resource/style.css">
+   <link rel="stylesheet" type="text/css" href="resource/style.css">
    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 
 </head>
