--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <div class="flex-container">
         <div class="flex-left">
-            <iframe width="100%" height="500" src="https://www.youtube.com/embed/0MW4HMY17uk" title="test" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="100%" height="500" src="https://www.youtube.com/embed/0MW4HMY17uk" title="Borderland SMP" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
 
         <div class="flex-right">
