--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
-   <title>Borderland SMP - Index</title>
+   <title>Borderland SMP</title>
 
     <link rel="stylesheet" type="text/css" href="style.css">
 
@@ -34,7 +34,7 @@
         </div>
 
         <div class="flex-right">
-                <h1>Lorem ipsum dolor sit amet.</h1>
+                <h1>Cross-play vanilla survival experience.</h1>
 
                 <div class="buttons">
                     <button id="btn-grad1"><a href="#">Join the Server</a></button>
