--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
                 <div class="buttons">
                     <button id="btn-grad1"><a href="#">Join the Server</a></button>
-                    <button id="btn-grad2"><a href="map.blsurvival.net">Server Map</a></button>
+                    <button id="btn-grad2"><a href="https://map.blsurvival.net">Server Map</a></button>
                 </div>
 
 <!--
