--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <h1>Cross-play vanilla survival experience.</h1>
 
                 <div class="buttons">
-                    <button id="btn-grad1"><a href="#">Join the Server</a></button>
+                    <button id="btn-grad1"><a href="invite">Join the Server</a></button>
                     <button id="btn-grad2"><a href="https://map.blsurvival.net">Server Map</a></button>
                 </div>
 
