--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <div class="section" id="page-1">
     
     <div class="header">
-       <img src="BORDERLAND_BANNER.png">
+       <img src="logohorizontal.png">
     </div>
 
 
