--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
    <!-- Meta -->
 
    <meta charset="UTF-8">
-   <meta name="description" content="Cross Compatable, Backwards compatable Minecraft SMP - Borderland ">
+   <meta name="description" content="Borderland - Cross-play Minecraft vanilla survival experience.">
    <!-- please ignore the tags.. -->
-   <meta name="keywords" content="Minecraft, Server, SMP , Survival, Notch, Autism, DreamSMP, TommyInnit, "> 
+   <meta name="keywords" content="Minecraft, Server, SMP , Survival, Notch, Autism, DreamSMP, TommyInnit, Borderland"> 
 <!--    <meta name="author" content="#">-->   
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta property="og:image" content="https://blsurvival.net/logo.png" />
 
-
-   <title>Borderland SMP</title>
+   <title>Borderland</title>
 
     <link rel="stylesheet" type="text/css" href="style.css">
 
