--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-   <!-- Meta -->
+    <meta charset="UTF-8">
+    <meta name="description" content="Cross-play Minecraft vanilla survival experience.">
+    <meta name="keywords" content="Minecraft, Server, SMP , Survival, Notch, Autism, DreamSMP, TommyInnit, Borderland"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:image" content="https://blsurvival.net/resources/logo.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
 
-   <meta charset="UTF-8">
-   <meta name="description" content="Borderland - Cross-play Minecraft vanilla survival experience.">
-   <!-- please ignore the tags.. -->
-   <meta name="keywords" content="Minecraft, Server, SMP , Survival, Notch, Autism, DreamSMP, TommyInnit, Borderland"> 
-<!--    <meta name="author" content="#">-->   
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <meta property="og:image" content="https://blsurvival.net/logo.png" />
-
-   <title>Borderland</title>
-
+    <title>Borderland</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 
 
@@ -23,7 +22,7 @@
 <div class="section" id="page-1">
     
     <div class="header">
-       <img src="logohorizontal.png">
+       <img src="resources/logohorizontal.png">
     </div>
 
 
