--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
  <div class="section" id="page-2">
 
     <div class="media">
-        <img src="bl_media.webp">
+        <img src="/resources/blmedia.png">
     </div>
 
 
