--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 
  <div class="section" id="page-2">
 
-    <div class="media">
-        <img src="/resources/blmedia.png">
+    <div class="header">
+        <img src="resources/blmedia.png">
     </div>
 
 
@@ -129,10 +129,127 @@
 
 
 
-<!-- <div class="section" id="page-3"><h1>PAGE THREE</h1></div>-->
+<div class="section" id="page-3">
+    <div class="header">
+        <img src="resources/bldonatedark.png">
+    </div>
 
-<!-- <div id="footer"></div>
- -->
+    <div class="donate">
+
+        <h1>Donations are <mark>non-refundable</mark> & go directly into server funding.</h1>
+
+        <div id="smart-button-container">
+              <div style="text-align: center;">
+                <div style="margin-bottom: 1.25rem;">
+                  <select id="item-options"><option value="Donation Rank" price="5">Donation Rank - 5 EUR</option><option value="Support" price="1">Support - 1 EUR</option></select>
+                  <select  id="quantitySelect"><option value="1">1</option></select>
+                </div>
+              <div id="paypal-button-container"></div>
+              </div>
+            </div>
+            <script src="https://www.paypal.com/sdk/js?client-id=sb&enable-funding=venmo&currency=EUR" data-sdk-integration-source="button-factory"></script>
+            <script>
+              function initPayPalButton() {
+                var shipping = 0;
+                var itemOptions = document.querySelector("#smart-button-container #item-options");
+            var quantity = parseInt(10);
+            var quantitySelect = document.querySelector("#smart-button-container #quantitySelect");
+            if (!isNaN(quantity)) {
+              quantitySelect.style.visibility = "visible";
+            }
+            var orderDescription = 'Donate to Borderland to help us run! All donations go towards server hosting and improvements. Non-Refundable.';
+            if(orderDescription === '') {
+              orderDescription = 'Item';
+            }
+            paypal.Buttons({
+              style: {
+                shape: 'rect',
+                color: 'gold',
+                layout: 'vertical',
+                label: 'donate',
+                
+              },
+              createOrder: function(data, actions) {
+                var selectedItemDescription = itemOptions.options[itemOptions.selectedIndex].value;
+                var selectedItemPrice = parseFloat(itemOptions.options[itemOptions.selectedIndex].getAttribute("price"));
+                var tax = (0 === 0 || true) ? 0 : (selectedItemPrice * (parseFloat(0)/100));
+                if(quantitySelect.options.length > 0) {
+                  quantity = parseInt(quantitySelect.options[quantitySelect.selectedIndex].value);
+                } else {
+                  quantity = 1;
+                }
+
+                tax *= quantity;
+                tax = Math.round(tax * 100) / 100;
+                var priceTotal = quantity * selectedItemPrice + parseFloat(shipping) + tax;
+                priceTotal = Math.round(priceTotal * 100) / 100;
+                var itemTotalValue = Math.round((selectedItemPrice * quantity) * 100) / 100;
+
+                return actions.order.create({
+                  purchase_units: [{
+                    description: orderDescription,
+                    amount: {
+                      currency_code: 'EUR',
+                      value: priceTotal,
+                      breakdown: {
+                        item_total: {
+                          currency_code: 'EUR',
+                          value: itemTotalValue,
+                        }
+                      }
+                    },
+                    items: [{
+                      name: selectedItemDescription,
+                      unit_amount: {
+                        currency_code: 'EUR',
+                        value: selectedItemPrice,
+                      },
+                      quantity: quantity,
+                      category: 'DONATION'
+                    }]
+                  }]
+                });
+              },
+              onApprove: function(data, actions) {
+                return actions.order.capture().then(function(orderData) {
+                  
+                  // Full available details
+                  console.log('Capture result', orderData, JSON.stringify(orderData, null, 2));
+
+                  // Show a success message within this page, e.g.
+                  const element = document.getElementById('paypal-button-container');
+                  element.innerHTML = '';
+                  element.innerHTML = '<h3>Thank you for your payment!</h3>';
+
+                  // Or go to another URL:  actions.redirect('thank_you.html');
+
+                });
+              },
+              onError: function(err) {
+                console.log(err);
+              },
+            }).render('#paypal-button-container');
+          }
+          initPayPalButton();
+            </script>
+        </div>
+
+
+</div> 
+
+
+<!--  FOOTER  -->
+
+    <div class="footer">
+        <p>&#169; 2022 - Borderland SMP</p>
+<!-- i did a list cos i think its easier to read :P -->
+            <a href="#">Back to Top</a>
+            <a href="#page-2">Media</a>
+            <a href="#page-3">Donate</a>
+            <a href="https://blsurvival.net/invite">Discord</a>
+    </div>
+
+
 
 
 </body>
